Фиксация промежуточного этапа